--- a/ottergram/src/App.css
+++ b/ottergram/src/App.css
@@ -11,6 +11,13 @@ body {
     width: 100%;
 }
 
+.description-component {
+    background: white;
+    text-align: center;
+    font-size: 0,5em;
+    width: 100%;
+}
+
 .post-list {
     padding: 0 10px;
     margin: 0;
